# azure

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
intune_client/: __init__.py  client.py
tests/: test_client.py
