[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intune-client"
version = "0.1.0"
description = "Library for managing Intune profiles via Microsoft Graph"
authors = [{name = "Example"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
